# telegram_client

./: .gitignore  LICENSE  README.md  gh_push.sh  publish.sh  pubspec.yaml  secret_log.status
.dart_tool/: package_config.json
.dart_tool/extension_discovery/: vs_code.json
.github/: FUNDING.yml
.github/workflows/: build-tdlib-cross.yml  build-telegram-bot-api-cross.yml  telegram-bot-api-android.yml
docs/: .gitignore  .last_build_id  README.md  index.html  main.dart.js  readme.md  version.json
docs/assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
docs/mtproto/: README.md
docs/tdlib/: README.md
docs/web/: .last_build_id  index.html  main.dart.js  manifest.json
docs_markdown/tdlib/: README.md
docs_markdown/telegram_client/: README.md
native_lib/: readme.md
package/mtproto/: CHANGELOG.md  README.md  pubspec.yaml
package/telegram_client/: .gitignore  CHANGELOG.md  LICENSE  README.md  alias.sh  dev.sh  pubspec.yaml
package/telegram_client_android/: .gitignore  .metadata  .pubignore  CHANGELOG.md  pubspec.yaml
package/telegram_client_apis/: CHANGELOG.md  README.md  pubspec.yaml
package/telegram_client_assets_flutter/: CHANGELOG.md  pubspec.yaml
package/telegram_client_cli/: CHANGELOG.md  pubspec.yaml
package/telegram_client_dart/: CHANGELOG.md  pubspec.yaml
package/telegram_client_fucshia/: CHANGELOG.md  (+1 more)
package/telegram_client_linux/linux/: CMakeLists.txt
package/telegram_client_macos/src/: CMakeLists.txt  telegram_client_macos.c
telegram_client_documentation/: README.md  pubspec.yaml
test/: telegram_client_test.dart
(+380 files in other folders)
